--- a/ClientAstree/Views/Shared/_Layout.cshtml
+++ b/ClientAstree/Views/Shared/_Layout.cshtml
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="~/css/now-ui-kit.css?v=1.3.1" asp-append-version="true" />
      <link rel="stylesheet" href="~/css/demo.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ClientAstree.styles.css" asp-append-version="true" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.6/jquery.simplePagination.js"></script>
+
 </head>
 <body>
     <header>
