--- a/ClientAstree/Views/Shared/_Layout.cshtml
+++ b/ClientAstree/Views/Shared/_Layout.cshtml
@@ -7,19 +7,20 @@
       <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200|Open+Sans+Condensed:700" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="~/css//now-ui-dashboard.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/now-ui-kit.css?v=1.3.1" asp-append-version="true" />
      <link rel="stylesheet" href="~/css/demo.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ClientAstree.styles.css" asp-append-version="true" />
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/simplePagination.js/1.6/jquery.simplePagination.js"></script>
 
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-0 py-0">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-0 py-0" >
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ClientAstree</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -43,6 +44,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
                         </li>
+                                                <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AutomobileContract" asp-action="Index">Automobile</a>
+                        </li>
+                                                <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PropertyContract" asp-action="Index">Property</a>
+                        </li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-controller="AutomobileContract" asp-action="Create">Add Automobile</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-controller="PropertyContract" asp-action="Create">Add Property</a>
+</li>
+
                         }
 
                            </li>
@@ -84,28 +98,34 @@
             &copy; 2024 - ClientAstree - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    
+    <script src="~/js/core/jquery.min.js" type="text/javascript"asp-append-version="true"></script>
+<script src="~/js/core/popper.min.js" type="text/javascript"asp-append-version="true"></script>
+<script src="~/js/core/bootstrap.min.js" type="text/javascript"asp-append-version="true"></script>
+<script src="~/js/plugins/perfect-scrollbar.jquery.min.js" type="text/javascript"asp-append-version="true"></script>
+
+<!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
+<script src="../assets/js/now-ui-dashboard.js" type="text/javascript"asp-append-version="true"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-     <script src="~/js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="~/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="~/js/core/bootstrap.min.js" type="text/javascript"></script>
+     <script src="~/js/core/jquery.min.js" type="text/javascript"asp-append-version="true"></script>
+  <script src="~/js/core/popper.min.js" type="text/javascript"asp-append-version="true"></script>
+  <script src="~/js/core/bootstrap.min.js" type="text/javascript"asp-append-version="true"></script>
   <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
   <script src="~/js/plugins/bootstrap-switch.js"></script>
   <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-  <script src="~/js/plugins/nouislider.min.js" type="text/javascript"></script>
+  <script src="~/js/plugins/nouislider.min.js" type="text/javascript"asp-append-version="true"></script>
   <!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
   <script src="~/js/plugins/moment.min.js"></script>
   <!--	Plugin for Tags, full documentation here: https://github.com/bootstrap-tagsinput/bootstrap-tagsinputs  -->
   <script src="~/js/plugins/bootstrap-tagsinput.js"></script>
   <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
-  <script src="~/js/plugins/bootstrap-selectpicker.js" type="text/javascript"></script>
+  <script src="~/js/plugins/bootstrap-selectpicker.js" type="text/javascript"asp-append-version="true"></script>
   <!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
-  <script src="~/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+  <script src="~/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"asp-append-version="true"></script>
   <!--  Google Maps Plugin    -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE" asp-append-version="true"></script>
   <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
-  <script src="~/js/now-ui-kit.js?v=1.3.1" type="text/javascript"></script>
+  <script src="~/js/now-ui-kit.js?v=1.3.1" type="text/javascript"asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
