Add automobile contract and propert contract

--- a/ClientAstree/Views/PropertyContract/Create.cshtml
+++ b/ClientAstree/Views/PropertyContract/Create.cshtml
@@ -25,9 +25,9 @@
         <label asp-for="Type">Property Type</label>
         <select asp-for="Type" class="form-control">
             <option value="">Select a type</option>
-            <option value="Residential">Residential</option>
+            <option value="House">House</option>
+            <option value="Apartment">Apartment</option>
             <option value="Commercial">Commercial</option>
-            <option value="Industrial">Industrial</option>
         </select>
         <span asp-validation-for="Type" class="text-danger"></span>
     </div>
