--- a/ClientAstree/Views/AutomobileContract/Create.cshtml
+++ b/ClientAstree/Views/AutomobileContract/Create.cshtml
@@ -8,7 +8,6 @@
 
 <form asp-action="Create" asp-controller="AutomobileContract" method="post">
     @Html.AntiForgeryToken()
-
     <div class="form-group">
         <label asp-for="VehicleMake">Vehicle Make</label>
         <input asp-for="VehicleMake" class="form-control" />
@@ -23,7 +22,13 @@
 
     <div class="form-group">
         <label asp-for="VehicleType">Vehicle Type</label>
-        <input asp-for="VehicleType" class="form-control" />
+        <select asp-for="VehicleType" class="form-control">
+            <option value="">Select a type</option>
+            @foreach (var type in Enum.GetValues(typeof(ClientAstree.Services.Base.VehicleType)))
+            {
+                <option value="@((int)type)">@type.ToString()</option>
+            }
+        </select>
         <span asp-validation-for="VehicleType" class="text-danger"></span>
     </div>
 
@@ -31,6 +36,12 @@
         <label asp-for="RegistrationNumber">Registration Number</label>
         <input asp-for="RegistrationNumber" class="form-control" />
         <span asp-validation-for="RegistrationNumber" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="RegistrationDate">Registration Date</label>
+        <input asp-for="RegistrationDate" type="date" class="form-control" />
+        <span asp-validation-for="RegistrationDate" class="text-danger"></span>
     </div>
 
     <div class="form-group">
@@ -57,6 +68,28 @@
         <label asp-for="VehicleValue">Vehicle Value ($)</label>
         <input asp-for="VehicleValue" type="number" step="0.01" class="form-control" />
     </div>
+
+    <div class="form-group">
+        <label asp-for="TrueVehicleValue">True Vehicle Value ($)</label>
+        <input asp-for="TrueVehicleValue" type="number" step="0.01" class="form-control" />
+    </div>
+<div class="form-group">
+    <label>Guarantees</label>
+    <div>
+        @foreach (var guarantee in Enum.GetValues(typeof(ClientAstree.Models.Guarantees)))
+        {
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox"
+                       value="@((int)guarantee)" id="@guarantee" name="Guarantees">
+                <label class="form-check-label" for="@guarantee">
+                    @guarantee
+                </label>
+            </div>
+        }
+    </div>
+    <span asp-validation-for="Guarantees" class="text-danger"></span>
+</div>
+
 
     <button type="submit" class="btn btn-primary">Create</button>
 </form>
