--- a/ClientAstree/Views/AutomobileContract/index.cshtml
+++ b/ClientAstree/Views/AutomobileContract/index.cshtml
@@ -22,6 +22,7 @@
         @foreach (var item in Model)
         {
             <tr>
+                <td>@item.Id</td>
                 <td>@item.VehicleMake</td>
                 <td>@item.Model</td>
                 <td>@item.VehicleType</td>
@@ -29,8 +30,13 @@
                 <td>@item.EndDate.ToString("yyyy-MM-dd")</td>
                 <td>@item.Quota</td>
                 <td>
-                    <a href="#" class="btn btn-primary">Edit</a> |
-                    <a href="#" class="btn btn-danger">Delete</a>
+                    <!-- Update the href to link to the Edit action method, passing the ID of the current item -->
+                    <a href="@Url.Action("Update", "AutomobileContract", new { id = item.Id })" class="btn btn-primary">Edit</a>
+                    <form asp-action="Delete" asp-controller="AutomobileContract" method="post" onsubmit="return confirm('Are you sure you want to delete this automobile?');">
+                        @Html.AntiForgeryToken()
+                        <input type="hidden" name="id" value="@item.Id" />
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
                 </td>
             </tr>
         }
