--- a/ClientAstree/Views/PropertyContract/index.cshtml
+++ b/ClientAstree/Views/PropertyContract/index.cshtml
@@ -27,8 +27,12 @@
                 <td>@item.StartDate.ToString("yyyy-MM-dd")</td>
                 <td>@item.EndDate.ToString("yyyy-MM-dd")</td>
                 <td>
-                    <a href="#" class="btn btn-primary">Edit</a> |
-                    <a href="#" class="btn btn-danger">Delete</a>
+                    <a href="@Url.Action("Update", "PropertyContract", new { id = item.Id })" class="btn btn-primary">Edit</a> |
+                    <form asp-action="Delete" asp-controller="PropertyContract" method="post" onsubmit="return confirm('Are you sure you want to delete this property?');">
+                        @Html.AntiForgeryToken()
+                        <input type="hidden" name="id" value="@item.Id" />
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
                 </td>
             </tr>
         }
