Implement CRUD operations for complaints management

--- a/ClientAstree/Views/Shared/_Layout.cshtml
+++ b/ClientAstree/Views/Shared/_Layout.cshtml
@@ -56,6 +56,12 @@
 <li class="nav-item">
     <a class="nav-link text-dark" asp-controller="PropertyContract" asp-action="Create">Add Property</a>
 </li>
+ <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Complaints" asp-action="Index">View Complaints</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Complaints" asp-action="Submit">Submit Complaint</a>
+    </li>
 
                         }
 
