--- a/ClientAstree/Views/Shared/_Layout.cshtml
+++ b/ClientAstree/Views/Shared/_Layout.cshtml
@@ -68,6 +68,13 @@
 <li class="nav-item">
     <a class="nav-link" asp-controller="Complaints" asp-action="MyComplaints">My Complaints</a>
 </li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-controller="Chat" asp-action="Index">Chat Rooms</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-controller="Chat" asp-action="AdminChatRoom">Chat with Admin</a>
+</li>
+
 
                         }
 
