--- a/ClientAstree/Views/Shared/_Layout.cshtml
+++ b/ClientAstree/Views/Shared/_Layout.cshtml
@@ -74,6 +74,9 @@
 <li class="nav-item">
     <a class="nav-link text-dark" asp-controller="Chat" asp-action="AdminChatRoom">Chat with Admin</a>
 </li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-controller="User" asp-action="Profile">Profile</a>
+</li>
 
 
                         }
