--- a/ClientAstree/Views/User/Profile.cshtml
+++ b/ClientAstree/Views/User/Profile.cshtml
@@ -1,5 +1,10 @@
 @model ClientAstree.Models.UserVM
-
+ <div class="wrapper">
+        <div class="page-header page-header-small" >
+      <div class="page-header-image" data-parallax="true" style="background-image:url(/img/fam1.png)" >
+      </div>
+       <div class="content-center">
+      <div class="container"></div>
 <h2>User Profile</h2>
 <div>
     <p>Email: @Model.Email</p>
@@ -18,6 +23,10 @@
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#editProfileModal">
     Update Profile
 </button>
+
+</div>
+</div>
+</div>
 <!-- Edit Profile Modal -->
 <div class="modal fade" id="editProfileModal" tabindex="-1" role="dialog" aria-labelledby="editProfileModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -102,7 +111,7 @@
             </div>
         </div>
     </div>
-</div>
+    </div>
 
 <script>
 $(document).ready(function() {
